After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730981 - eglglessink: Video flickers while window resizing
eglglessink: Video flickers while window resizing
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.2.4
Other Linux
: Normal normal
: 1.2.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-30 05:40 UTC by Yogish
Modified: 2014-05-30 07:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (1.15 KB, patch)
2014-05-30 05:40 UTC, Yogish
committed Details | Review

Description Yogish 2014-05-30 05:40:57 UTC
Created attachment 277513 [details] [review]
Fix

With compiz running video flickering is observed while resizing output window of 
"gst-launch-1.0 videotestsrc ! eglglessink"

Flickering could be avoided by setting background of window created by sink to None. Other sinks e.g Xv do similar to avoid flicker while resize.
Comment 1 Sebastian Dröge (slomo) 2014-05-30 07:43:56 UTC
That's fixed in glimagesink btw

commit a1e479a9a0f9d91eec147c27bd336d7e46e90648
Author: Yogish Kulkarni <yogishk@nvidia.com>
Date:   Thu May 29 13:44:22 2014 +0530

    eglglessink: Set window background as None
    
    Prevent X from redrawing the background on ConfigureNotify by
    setting background as None. Otherwise flickering is observed
    when resizing the window.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730981