eglglessink: Set window background as None

Prevent X from redrawing the background on ConfigureNotify by
setting background as None. Otherwise flickering is observed
when resizing the window.

https://bugzilla.gnome.org/show_bug.cgi?id=730981